<resources>
    <string name="app_name" translatable="false">Minesweeper</string>
    <string name="textcomecar">Touch Begin to start a new game</string>
    <string name="winpart1">"You win, it took  "</string>
    <string name="winpart2">seconds!</string>
    <string name="losepart1">"You Lose, but it took "</string>
    <string name="losepart2">seconds!</string>
    <string name="doiszeros" translatable="false">00</string>
    <string name="zero" translatable="false">0</string>
    <string name="butaoiniciarjogo">Begin</string>
    <string name="umjogador">1 Player</string>
    <string name="doisjogadores">2 Players</string>
    <string name="creditos">Credits</string>
    <string name="gamename">Minesweeper</string>
    <string name="title_activity_gamecreditos" translatable="false">gamecreditos</string>
    <string name="title_activity_gamesetting" translatable="false">Gamesetting</string>
    <string name="campo_de_jogo">Game field</string>
    <string name="linhas_opcoes">Lines</string>
    <string name="colunas_opcoes">Columns</string>
    <string name="bombas_opcoes">Bombs</string>
    <string name="avancar_opcoes">Continue</string>
    <string name="errobombas">Bombs - Min: 10 | Max: 40</string>
    <string name="errorLinCol">Lines and Columns - Min: 8 | Max: 15</string>
    <string name="Errorall">Lines and Columns - Min: 8 | Max: 15 Bombs - Min: 10 | Max: 40</string>
    <string name="realizado_por">Performed by:</string>
    <string name="realizado_no_mbito_da_cadeira_de">Made under the scope of the discipline of:</string>
    <string name="cadeira">Programação em Java para Dispositivos Moveis</string>
    <string name="isec" translatable="false">ISEC</string>
    <string name="voltar">Back</string>
    <string name="bruno" translatable="false">Bruno Sousa nº21260212 TPSI</string>
    <string name="tiago" translatable="false">Tiago Correia nº21260205 TPSI</string>
    <string name="ponelose">" Player 1 Lose the game -"</string>
    <string name="ptwolose">" Player 2 Lose the game -"</string>
    <string name="ptwowin">" Player 2 Winner -"</string>
    <string name="ponewin">" Player 1 Winner -"</string>
    <string name="gametime">" Game time: "</string>
    <string name="playerplaing">Player</string>
    <string name="turn">turn</string>
    <string name="oneplaymode">player mode active</string>
    <string name="twoplayermode">players mode active</string>
    <string name="nowinner">Neither player wins. Every block was uncovered.</string>
</resources>
